--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
     }
   } catch (e) {
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script></head><body><div id="root"></div><script src="static/runtime~manager.1be4c9c775fb85324315.bundle.js"></script><script src="static/manager.c6cd51ba009f90f9f629.bundle.js"></script></body></html>
+  }</script></head><body><div id="root"></div><script src="./sb_dll/storybook_ui_dll.js"></script><script src="runtime~main.bf7f1bbd18bd2f1ec8df.bundle.js"></script><script src="vendors~main.47f6d5599b5e850afca2.bundle.js"></script><script src="main.4c3332a926ea018a8462.bundle.js"></script></body></html>
