--- a/iframe.html
+++ b/iframe.html
@@ -55,6 +55,6 @@
     }
   } catch (e) {
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script><link href="iframe.css" rel="stylesheet"></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the storybook config.</li><li>Try reloading the page.</li></ul></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code">
+  }</script><link href="main.css" rel="stylesheet"></head><body><div class="sb-nopreview sb-wrapper"><div class="sb-nopreview_main"><h1 class="sb-nopreview_heading sb-heading">No Preview</h1><p>Sorry, but you either have no stories or none are selected somehow.</p><ul><li>Please check the storybook config.</li><li>Try reloading the page.</li></ul></div></div><div class="sb-errordisplay sb-wrapper"><div id="error-message" class="sb-heading"></div><pre class="sb-errordisplay_code">
     <code id="error-stack"></code>
-  </pre></div><div id="root"></div><script src="static/runtime~iframe.d872789fed4fedb429b0.bundle.js"></script><script src="static/vendors~iframe.b4238d12637f9adebe9f.bundle.js"></script><script src="static/iframe.675367604121154a3d7a.bundle.js"></script></body></html>
+  </pre></div><div id="root"></div><script src="runtime~main.1e5616b0e77da45e95a6.bundle.js"></script><script src="vendors~main.1e5616b0e77da45e95a6.bundle.js"></script><script src="main.1e5616b0e77da45e95a6.bundle.js"></script></body></html>
